Fix header on small screens.

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
 #titleImage {
   height: 100%;
   width: auto;
+  max-width: 100%;
 }
 
 .content {
@@ -43,6 +44,10 @@ body {
   .knotrisContainer {
     width: 375px;
     height: 403px;
+  }
+
+  .header {
+    padding: 20px;
   }
 }
 
